# gpm2op-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: development.md
src/: chrome.rs  cli.rs  credential.rs  error.rs  main.rs  op.rs  report.rs  selfupdate.rs  sync.rs
